--- a/broadcastreceivers/src/main/res/layout/activity_main.xml
+++ b/broadcastreceivers/src/main/res/layout/activity_main.xml
@@ -15,4 +15,11 @@
         android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:src="@drawable/ic_battery_full_black_48px"/>
+
+    <Button
+        android:id="@+id/btnOkay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/btnOkay"/>
 </RelativeLayout>
